-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
-
Environment:
Alpine Linux 3.11.3, musl libc (x86_64) version 1.1.24.
-
b26
-
x86
-
other
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8284574 | 11.0.16-oracle | Fairoz Matte | P3 | Resolved | Fixed | b03 |
| JDK-8281878 | 11.0.15 | Goetz Lindenmaier | P3 | Resolved | Fixed | b03 |
Steps to reproduce:
- Build openjdk from portola repository with --enable-debug option
- Run NMT test:
> jtreg -v:all test/hotspot/jtreg/runtime/NMT/PrintNMTStatistics.java
stdout:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/os_linux.cpp:3394
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (root/mount/repos/branch-portola-dev/portola-dev/src/hotspot/os/linux/os_linux.cpp:3394), pid=5429, tid=5430
# assert(is_aligned(size, page_sz)) failed: Size must be page aligned
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc..portola-dev)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc..portola-dev, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x13e8622] os::committed_in_range(unsigned char*, unsigned long, unsigned char*&, unsigned long&)+0x532
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /root/mount/repos/branch-portola-dev/portola-dev/JTwork/scratch/core.5429)
#
# An error report file with more information is saved as:
# /root/mount/repos/branch-portola-dev/portola-dev/JTwork/scratch/hs_err_pid5429.log
The issue is reproduced when call:
> java -XX:+UnlockDiagnosticVMOptions -XX:+PrintNMTStatistics -XX:NativeMemoryTracking=detail
-version
- Build openjdk from portola repository with --enable-debug option
- Run NMT test:
> jtreg -v:all test/hotspot/jtreg/runtime/NMT/PrintNMTStatistics.java
stdout:
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/os_linux.cpp:3394
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (root/mount/repos/branch-portola-dev/portola-dev/src/hotspot/os/linux/os_linux.cpp:3394), pid=5429, tid=5430
# assert(is_aligned(size, page_sz)) failed: Size must be page aligned
#
# JRE version: OpenJDK Runtime Environment (15.0) (fastdebug build 15-internal+0-adhoc..portola-dev)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 15-internal+0-adhoc..portola-dev, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x13e8622] os::committed_in_range(unsigned char*, unsigned long, unsigned char*&, unsigned long&)+0x532
#
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /root/mount/repos/branch-portola-dev/portola-dev/JTwork/scratch/core.5429)
#
# An error report file with more information is saved as:
# /root/mount/repos/branch-portola-dev/portola-dev/JTwork/scratch/hs_err_pid5429.log
The issue is reproduced when call:
> java -XX:+UnlockDiagnosticVMOptions -XX:+PrintNMTStatistics -XX:NativeMemoryTracking=detail
-version
- backported by
-
JDK-8281878 NMT tests fail on unaligned thread size with debug build
-
- Resolved
-
-
JDK-8284574 NMT tests fail on unaligned thread size with debug build
-
- Resolved
-
- relates to
-
JDK-8199067 [REDO] NMT: Enhance thread stack tracking
-
- Closed
-