8241004: NMT tests fail on unaligned thread size with debug build

Reviewed-by: zgu, dsamersoff